# mod_uwa

./: COPYRIGHT  Makefile.in.ap1  Makefile.in.ap2  Makefile.tmpl  README  config.h.in  configure  configure.ac  ldaplib.c  ldaplib.h  ldaptest.c  libuwa.module.in  mod_uwa.c  modules.mk  uwa_crypt.c  uwa_crypt.h
doc/: install.html  mod_uwa.html
